<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baselLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tchelet"
    android:orientation="vertical"
    tools:context="com.example.dell.android5778_7109_3610_02.controllers.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutIn1"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="128dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/username"
            android:textSize="25dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/userName"
            android:layout_width="179dp"
            android:layout_height="45dp"
            android:fontFamily="Ariel"
            android:hint="@string/enter_username"
            android:inputType="text"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="192dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutIn2"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="128dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/password"
            android:textSize="25dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/passName"
            android:layout_width="185dp"
            android:layout_height="45dp"
            android:fontFamily="Ariel"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutIn3"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="128dp">

        <Button
            android:id="@+id/signIn"
            android:layout_width="193dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:text="@string/sign_in" />


        <TextView
            android:id="@+id/clear"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:fontFamily="casual"
            android:text="@string/clear"
            android:textSize="17dp"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>

