<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.android5778_7109_3610_02.controllers.AddCarFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="285dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/branchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/branch"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/branchSpinner"
                android:layout_width="302dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/modelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/model"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/modelSpinner"
                android:layout_width="317dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mileText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/mile"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/mileBox"
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="number"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cnText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/car_number"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/cnBox"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="number"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/colorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/color"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <Spinner
                android:id="@+id/colorSpinner"
                android:layout_width="217dp"
                android:layout_height="match_parent" />


        </LinearLayout>

        <Button
            android:id="@+id/add_car_Button"
            android:layout_width="396dp"
            android:layout_height="68dp"
            android:text="Add Car" />
    </LinearLayout>

</FrameLayout>
