<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dell.android5778_7109_3610_02.controllers.AddClientFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fnText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/firstName"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/fnBox"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lnText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/lastName"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/lnBox"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/id"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/idBox"
                android:layout_width="328dp"
                android:layout_height="match_parent"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="number"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/phoneNum"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/phoneBox"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="phone"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/email"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="textEmailAddress"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cardText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:text="@string/creditCard"
                android:textSize="25dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/cardBox"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:fontFamily="Ariel"
                android:hint="@string/enter"
                android:inputType="number"></EditText>
        </LinearLayout>

        <Button
            android:id="@+id/add_client_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Add Client" />
    </LinearLayout>

</FrameLayout>
